apps/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra
  labels:
    app.kubernetes.io/part-of: infra
    app.kubernetes.io/managed-by: kubectl
